`ENG-833` migrate cookie based auth to bearer (#9)
* feat(auth): migrate auth and tests to Authorization Bearer <sessionId> method

* fix(test/socket): update sockettest to use Bearer auth

* fix(typo): beaerAuth -> bearerAuth

* docs(openapi): update docs with Bearer information

* fix(auth): no user check required
